# ibus-canna

./: AUTHORS  COPYING  Makefile.am  canna.xml.in.in  configure.ac
src/: .gitignore  Makefile  Makefile.am  cannaui.cpp  cannaui.h  engine.cpp  engine.h  main.cpp
